Update the branding for web for VerusSky.

--- a/bskyweb/templates/base.html
+++ b/bskyweb/templates/base.html
@@ -105,8 +105,18 @@
 {%- block body_all %}
   <div id="root">
     <div id="splash">
-      <!-- Bluesky SVG -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 360 320"><path fill="#0085ff" d="M180 142c-16.3-31.7-60.7-90.8-102-120C38.5-5.9 23.4-1 13.5 3.4 2.1 8.6 0 26.2 0 36.5c0 10.4 5.7 84.8 9.4 97.2 12.2 41 55.7 55 95.7 50.5-58.7 8.6-110.8 30-42.4 106.1 75.1 77.9 103-16.7 117.3-64.6 14.3 48 30.8 139 116 64.6 64-64.6 17.6-97.5-41.1-106.1 40 4.4 83.5-9.5 95.7-50.5 3.7-12.4 9.4-86.8 9.4-97.2 0-10.3-2-27.9-13.5-33C336.5-1 321.5-6 282 22c-41.3 29.2-85.7 88.3-102 120Z"/></svg>
+      <!-- VerusSky Logo -->
+      <svg width="201" height="201" viewBox="0 0 201 201" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g clip-path="url(#clip0_1_20)">
+          <path d="M100.5 201C156.005 201 201 156.005 201 100.5C201 44.9954 156.005 0 100.5 0C44.9954 0 0 44.9954 0 100.5C0 156.005 44.9954 201 100.5 201Z" fill="white"/>
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M100.5 0C155.968 0 201 45.0324 201 100.5C201 155.967 155.967 201 100.5 201C45.0326 201 0 155.968 0 100.5C0 45.0327 45.0326 0 100.5 0ZM51.2278 36.3533C55.0232 33.1034 60.3483 30.4339 64.9778 32.3137C73.3023 35.6939 95.6682 80.7852 95.6682 80.7852C95.6682 80.7852 126.953 36.3395 138.189 32.2864C142.022 30.9038 147.278 33.3358 151.286 36.3322C165.353 46.8492 166.806 61.5218 165.59 65.5923C164.062 70.7098 86.3523 169.309 86.3523 169.309C84.0283 168.361 37.9847 82.9026 35.4895 68.2802C33.105 54.3063 41.2179 44.8116 51.2278 36.3533V36.3533Z" fill="#3165D4"/>
+        </g>
+        <defs>
+          <clipPath id="clip0_1_20">
+            <rect width="201" height="201" fill="white"/>
+          </clipPath>
+        </defs>
+      </svg>
     </div>
   </div>
 
