--- a/bskyweb/templates/base.html
+++ b/bskyweb/templates/base.html
@@ -9,7 +9,7 @@
   -->
   <link rel="preconnect" href="https://bsky.social">
   <link rel="preconnect" href="https://go.bsky.app">
-  <title>{%- block head_title -%}Bluesky{%- endblock -%}</title>
+  <title>{%- block head_title -%}VerusSky{%- endblock -%}</title>
 
   <!-- Hello Humans! API docs at https://atproto.com -->
 
